[package]
name = "nutdb"
version = "0.1.0"
edition = "2021"
authors = ["unbyte <i@shangyes.net>"]
readme = "README.md"
homepage = "https://github.com/nutdb/nutdb"
repository = "https://github.com/nutdb/nutdb.git"
description = "NutDB: an in-process analytical database for Rust."
license = "MIT"
documentation = "https://docs.rs/nutdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
derive_more = "0.99"
bigdecimal = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser_bench"
harness = false

[features]
