[package]
name = "nutdb-api"
version = "0.1.0"
edition = "2021"
authors = ["unbyte <i@shangyes.net>"]
homepage = "https://github.com/nutdb/nutdb"
repository = "https://github.com/nutdb/nutdb.git"
description = "API abstraction for NutDB."
license = "MIT"
documentation = "https://docs.rs/nutdb-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
