[package]
name = "nutdb-core"
version = "0.1.0"
edition = "2021"
authors = ["unbyte <i@shangyes.net>"]
homepage = "https://github.com/nutdb/nutdb"
repository = "https://github.com/nutdb/nutdb.git"
description = "NutDB Core."
license = "MIT"
documentation = "https://docs.rs/nutdb-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutdb-api = { path = "../nutdb-api", version = "0.1.0" }
